--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: Roboto;
+  src: url(assets/fonts/Roboto-Regular.ttf);
+}
+
+@font-face {
+  font-family: RobotoMono;
+  src: url(assets/fonts/RobotoMono-Regular.ttf);
+}
+
+:root {
+  --green-color: #54feab;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  font-family: Roboto;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background: #212733;
+}
