--- a/src/app/shared/ui/skeleton/bar/bar.component.html
+++ b/src/app/shared/ui/skeleton/bar/bar.component.html
@@ -1,1 +1,5 @@
-<div class="skeleton" [style.width.px]="randomWidth()"></div>
+<div
+  class="skeleton"
+  [style.width.px]="width || randomWidth()"
+  [style.height.px]="height || 30"
+></div>
